# wg-plonkish

./: .gitignore  ABSTRACT.md  COPYING.md  Cargo.toml  LICENSE-MIT  README.md  ZKProof.lean  book.toml  lake-manifest.json  lakefile.toml
.github/: dependabot.yml
.github/workflows/: lean_action_ci.yml  lints.yml  merge-acceptance.yaml  render-site.yaml  tests.yml
ZKProof/: README.md  Relations.lean
ZKProof/Plonkish/: Defs.lean  Examples.lean
css/: style.css
plonkish-encoding/: Cargo.toml
plonkish-relation/: Cargo.toml
plonkish-relation/src/: lib.rs
src/: ABSTRACT.md  SUMMARY.md  changelog.md  draft-name-plonkish-00.html  draft-name-plonkish-00.md  draft-name-plonkish-00.txt  draft-name-plonkish-00.xml  example.md  macros.txt  optimizations.md  relation.md
util/: find-orphaned-files.sh  gen-settings.sh
